New Crowdin updates (#14875)
* New translations: faq.xml (German)

* New translations: appeal.xml (Catalan)

* New translations: appeal.xml (Danish)

* New translations: appeal.xml (German)

* New translations: appeal.xml (Polish)

* New translations: site.xml (Ukrainian)

* New translations: dgt.xml (Ukrainian)

* New translations: appeal.xml (Spanish)

* New translations: appeal.xml (Hebrew)

* New translations: appeal.xml (Portuguese)

* New translations: appeal.xml (Ukrainian)

* New translations: site.xml (Ukrainian)

* New translations: arena.xml (Ukrainian)

* New translations: team.xml (Ukrainian)

* New translations: swiss.xml (Ukrainian)

* New translations: dgt.xml (Ukrainian)

* New translations: puzzle.xml (Ukrainian)

* New translations: oauthscope.xml (Ukrainian)

* New translations: appeal.xml (Hebrew)

* New translations: appeal.xml (Portuguese)

* New translations: appeal.xml (Albanian)

* New translations: appeal.xml (Ukrainian)

* New translations: appeal.xml (Galician)

* New translations: appeal.xml (Norwegian Nynorsk)

* New translations: ublog.xml (Ukrainian)

* New translations: puzzle.xml (Ukrainian)

* New translations: storm.xml (Ukrainian)

* New translations: oauthscope.xml (Ukrainian)

* New translations: onboarding.xml (Ukrainian)

* New translations: appeal.xml (Spanish)

* New translations: appeal.xml (Portuguese)

* New translations: appeal.xml (Russian)

* New translations: appeal.xml (Galician)

* New translations: appeal.xml (Persian)

* New translations: site.xml (Catalan)

* New translations: team.xml (Catalan)

* New translations: activity.xml (Catalan)

* New translations: puzzle.xml (Catalan)

* New translations: storm.xml (Catalan)

* New translations: appeal.xml (Catalan)

* New translations: appeal.xml (Portuguese)

* New translations: appeal.xml (Swiss German)

* New translations: appeal.xml (Persian)

* New translations: broadcast.xml

--- a/translation/dest/oauthScope/uk-UA.xml
+++ b/translation/dest/oauthScope/uk-UA.xml
@@ -18,7 +18,7 @@
   <string name="studyWrite" comment="In the context of an access token, a setting that enables third party software to create, update or delete studies and broadcasts.">Створювати, поновлювати та видаляти дослідження й трансляції</string>
   <string name="tournamentWrite" comment="In the context of an access token, a setting that permits third party software to create, update or delete studies and join tournaments.">Створювати, поновлювати й брати участь у турнірах</string>
   <string name="racerWrite" comment="In the context of an access token, a setting which permits third party software to create, and join puzzle races (this is for the activity/minigame Puzzle Racer: https://lichess.org/racer)">Створювати та приєднуватись до пазлових перегонів</string>
-  <string name="puzzleRead" comment="In the context of an access token, a setting which permits third-party software to view the user's puzzle solving history.">Переглядати активність по задачах</string>
+  <string name="puzzleRead" comment="In the context of an access token, a setting which permits third-party software to view the user's puzzle solving history.">Перегляд активності в задачах</string>
   <string name="teamRead" comment="Gives permission to third-party software to *read* information that already exists. However it won't be able to write (create) private studies or broadcasts.">Переглядати інформацію приватних команд</string>
   <string name="teamWrite" comment="In the context of an access token, a setting that permits the third party software to join or leave teams on your behalf.">Приєднуватися та покидати команди</string>
   <string name="teamLead">Контролювати команди, які ви адмініструєте: відправляти приватні повідомлення, виганяти учасників</string>
@@ -48,4 +48,6 @@
   <string name="attentionOfDevelopers">Нотатка тільки для уваги розробників:</string>
   <string name="possibleToPrefill">Цю форму можна попередньо заповнити, налаштувавши параметри запиту URL-адреси.</string>
   <string name="forExample" comment="%s is an example URL.&#10;&#10;Please note the sentence continues on the next line. The complete sentence is:&#10;'For example: https://lichess.org/account/oauth/token/create?scopes[]=challenge:write&amp;scopes[]=puzzle:read&amp;description=Prefilled+token+example&#10;ticks the challenge:create and puzzle:read scopes, and sets the token description.'">Приклад: %s</string>
+  <string name="scopesCanBeFound" comment="scopesCanBeFound&#10;&#10;For this page in particular, developers can link to it so that some options are pre-ticked when a user follows the URL.&#10;&#10;To pre-tick those options, developers need the scope codes, which they can find by inspecting the source code of the page itself.">Коди області видимості можна знайти в HTML коді форми.</string>
+  <string name="givingPrefilledUrls">Надання цих заздалегідь заповнених URL вашим користувачам допоможе їм отримати правильні області видимості токенів.</string>
 </resources>
