--- a/translation/dest/site/uk-UA.xml
+++ b/translation/dest/site/uk-UA.xml
@@ -68,7 +68,7 @@
   <string name="goDeeper">Ще глибше</string>
   <string name="showThreat">Показати загрозу</string>
   <string name="inLocalBrowser">у браузері</string>
-  <string name="toggleLocalEvaluation">Включити аналіз на комп\'ютері</string>
+  <string name="toggleLocalEvaluation">Включити локальний аналіз</string>
   <string name="promoteVariation">Підвищити пріоритет варіанта</string>
   <string name="makeMainLine">Зробити варіант основним</string>
   <string name="deleteFromHere">Видалити з цього місця</string>
@@ -460,8 +460,7 @@
   <string name="continueFromHere">Продовжити звідси</string>
   <string name="toStudy">Дослідження</string>
   <string name="importGame">Імпортувати гру</string>
-  <string name="importGameExplanation">Вставте PGN гри щоб отримати повтор в браузері,
-комп\'ютерний аналіз, ігровий чат та посилання, яким можна поділитися.</string>
+  <string name="importGameExplanation">Вставте PGN гри щоб отримати повтор в браузері, комп\'ютерний аналіз, ігровий чат та посилання, яким можна поділитися.</string>
   <string name="importGameCaveat">Варіації будуть видалені. Для збереження імпортуйте PGN через дослідження.</string>
   <string name="importGameDataPrivacyWarning">Цей PGN може бути у вільному доступі. Для імпорту гри в приватному режимі використовуйте студії.</string>
   <plurals name="nbImportedGames">
@@ -576,9 +575,9 @@
   <string name="editProfile">Редагувати профіль</string>
   <string name="firstName">Ім\'я</string>
   <string name="lastName">Прізвище</string>
-  <string name="setFlair">Оберіть свій емодзі</string>
-  <string name="flair">Аватар</string>
-  <string name="youCanHideFlair">Це налаштування вимикає аватари всіх користувачів сайту.</string>
+  <string name="setFlair">Оберіть свій символ</string>
+  <string name="flair">Символ</string>
+  <string name="youCanHideFlair">Це налаштування вимикає символи всіх користувачів сайту.</string>
   <string name="biography">Біографія</string>
   <string name="countryRegion" comment="flag&#10;Appears when you edit your profile. Lets a player add a country/flag (not all flags are for countries) to their profile">Країна чи область</string>
   <string name="thankYou">Дякуємо!</string>
@@ -845,7 +844,7 @@
   <string name="fullFeatured">Повнофункціональний</string>
   <string name="phoneAndTablet">Для смартфонів та планшетів</string>
   <string name="bulletBlitzClassical">Куля, бліц, класичні шахи</string>
-  <string name="correspondenceChess">Заочна</string>
+  <string name="correspondenceChess">Заочні</string>
   <string name="onlineAndOfflinePlay">Гра онлайн та оффлайн</string>
   <string name="viewTheSolution">Дивитись рішення</string>
   <string name="followAndChallengeFriends">Спостерігайте і кидайте виклик друзям</string>
@@ -869,7 +868,7 @@
   <string name="dark">Темний</string>
   <string name="transparent">Прозорий</string>
   <string name="deviceTheme">Тема пристрою</string>
-  <string name="backgroundImageUrl">URL фонового зображення:</string>
+  <string name="backgroundImageUrl">Посилання фонового зображення:</string>
   <string name="boardGeometry">Вигляд шахівниці</string>
   <string name="boardTheme">Оформлення шахівниці</string>
   <string name="boardSize">Розмір дошки</string>
@@ -1037,7 +1036,7 @@
   <string name="simulDescription">Опис сеансу</string>
   <string name="simulDescriptionHelp">Чи хочете ви щось повідомити учасникам?</string>
   <string name="markdownAvailable">%s доступний для більш детального форматування.</string>
-  <string name="embedsAvailable">Вставте URL-адресу гри чи розділ дослідження, щоб вставити його.</string>
+  <string name="embedsAvailable">Вставте посилання на гру чи розділ дослідження, щоб вставити його.</string>
   <string name="inYourLocalTimezone">У вашому місцевому часовому поясі</string>
   <string name="tournChat">Турнірний чат</string>
   <string name="noChat">Без чату</string>
