--- a/ui/.build/readme
+++ b/ui/.build/readme
@@ -5,8 +5,8 @@ ui/build was lovingly crafted from a single block of wood as a personal gift to 
   ui/build can be run from anywhere, does not care about cwd
 
 Options:
-  --clean             clean build artifacts
-  -c, --clean-build   clean build artifacts then build everything
+  --clean             clean build artifacts and exit
+  -c, --clean-build   clean build artifacts then build
   -d, --debug         build assets with site.debug = true
   -p, --prod          build minified assets (prod builds)
   -w, --watch         build, watch for changes, but terminate on package.json changes
@@ -24,9 +24,9 @@ Options:
 Examples:
   ./build --clean            # clean only
   ./build -c                 # clean build artifacts then build everything
-  ./build -rc                # recommended - clean build, watch, and clean rebuild when needed
+  ./build -rc                # recommended for maintainers - clean build, watch, clean rebuild
   ./build -d                 # build client assets with site.debug = true
-  ./build -wn                # build, watch, no pnpm install
+  ./build -np                # no pnpm install, build minified
   ./build -cp                # clean, build minified
   ./build analyse site msg   # build analyse, site, and msg modules (as opposed to everything)
   ./build -r dasher chart    # watch mode for dasher and chart modules
