--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -791,9 +791,7 @@
   <string name="transparent">Transparent</string>
   <string name="deviceTheme">Device theme</string>
   <string name="backgroundImageUrl">Background image URL:</string>
-  <string name="boardGeometry">Board geometry</string>
-  <string name="boardTheme">Board theme</string>
-  <string name="boardSize">Board size</string>
+  <string name="board">Board</string>
   <string name="pieceSet">Piece set</string>
   <string name="embedInYourWebsite">Embed in your website</string>
   <string name="usernameAlreadyUsed">This username is already in use, please try another one.</string>
