--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -792,6 +792,11 @@
   <string name="deviceTheme">Device theme</string>
   <string name="backgroundImageUrl">Background image URL:</string>
   <string name="board">Board</string>
+  <string name="size">Size</string>
+  <string name="opacity">Opacity</string>
+  <string name="brightness">Brightness</string>
+  <string name="hue">Hue</string>
+  <string name="boardReset">Reset colors to default</string>
   <string name="pieceSet">Piece set</string>
   <string name="embedInYourWebsite">Embed in your website</string>
   <string name="usernameAlreadyUsed">This username is already in use, please try another one.</string>
