--- a/translation/source/faq.xml
+++ b/translation/source/faq.xml
@@ -169,7 +169,7 @@ We show the red icon to alert you when this happens. Often you can explicitly al
 <string name="stopMyselfFromPlaying">Stop myself from playing?</string>
 <string name="mentalHealthCondition">stand-alone mental health condition</string>
 <string name="lichessUserstyles">Lichess userstyles</string>
-<string name="lessLobbyPools">less lobby pools</string>
+<string name="fewerLobbyPools">fewer lobby pools</string>
 <string name="adviceOnMitigatingAddiction">We regularly receive messages from users asking us for help to stop them from playing too much.
 
 While Lichess doesn’t ban or block players except for Terms of Service violations, we recommend the use of external tools to limit excessive playing behavior. Some common suggestions for website blockers include %1$s, %2$s, and %3$s. If you want to keep using the site but not get tempted by fast time controls, you might also be interested in %4$s, here is one with %5$s.
