New Crowdin updates (#15277)
* New translations: site.xml (Nepali)

* New translations: site.xml (Turkish)

* New translations: timeago.xml (Turkish)

* New translations: site.xml (Nepali)

* New translations: site.xml (Luxembourgish)

* New translations: learn.xml (Nepali)

* New translations: class.xml (Nepali)

* New translations: puzzle.xml (Nepali)

* New translations: onboarding.xml (Nepali)

* New translations: site.xml (Bengali)

* New translations: study.xml (Bengali)

* New translations: puzzle.xml (Bengali)

--- a/translation/dest/site/ne-NP.xml
+++ b/translation/dest/site/ne-NP.xml
@@ -220,6 +220,11 @@
   <string name="usernameCanBeUsedForNewAccount">यो प्रयोगकर्ता-नाम प्रयोग गरेर नयाँ खाता खोल्न सक्नुहुन्छ ।</string>
   <string name="emailSent">हामिले %sमा एउटा इमेल पठाएका छौँ ।</string>
   <string name="emailCanTakeSomeTime">इमेल आउन केहि समय लाग्न सक्छ।</string>
+  <string name="refreshInboxAfterFiveMinutes">५ मिनेट कुर्नुहोस् र इमेल इनबक्स रिफ्रेस गर्नुहोस्</string>
+  <string name="checkSpamFolder">स्पाम (spam) फोल्डर पनि हेर्नुहोस्, त्यता परेको हुन सक्छ । त्यस्तो छ भने स्पाम हैन भनेर मार्क गर्नुहोस् ।</string>
+  <string name="emailForSignupHelp">सबै कुरा विफल भए, हामीलाई यो इमेल पठाउनुहोस् । </string>
+  <string name="copyTextToEmail">माथि को टेक्स्ट कपि पेस्ट गरेर %s लाई पठाउनुहोस् । </string>
+  <string name="accountCanLogin">अब तपाई %s भएर लगइन गर्न सक्नुहुनेछ ।</string>
   <string name="rank">स्थान</string>
   <string name="rankX">स्थान: %s</string>
   <plurals name="rankIsUpdatedEveryNbMinutes">
@@ -236,6 +241,8 @@
     <item quantity="other">तपाइसँग खेलिएका %s खेलहरु</item>
   </plurals>
   <string name="cancel">रद्द गर्नुहोस्</string>
+  <string name="whiteTimeOut">सेतोको समय सक्कियो ।</string>
+  <string name="blackTimeOut">कालोको समय सक्कियो ।</string>
   <string name="drawOfferSent">बराबरीको प्रस्ताव पठाइयो</string>
   <string name="drawOfferAccepted">बराबरीको प्रस्ताव स्वीकृत भयो</string>
   <string name="drawOfferCanceled">बराबरीको प्रस्ताव रद्द भयो</string>
@@ -252,6 +259,7 @@
   <string name="abortGame">खेल रद्द गरौ</string>
   <string name="gameAborted">खेल रद्द गरियो</string>
   <string name="standard">सामान्य</string>
+  <string name="customPosition">कस्टम पोजिसन् </string>
   <string name="unlimited">असीमित</string>
   <string name="mode">मोड</string>
   <string name="casual">अनौपचारिक</string>
@@ -356,6 +364,7 @@
   <string name="siteDescription">निःशुल्क अनलाईन बुद्धिचाल सर्भर। अहिल्यै एउटा सफा इन्टरफेसमा बुद्धिचाल खेलौं: कुनै दर्ता नगरी, कुनै बिज्ञापन नहेरी, कुनै प्लगइन बिना। कम्प्युटर संग, मित्रहरुसँग वा संसारभरका अरु खेलाडीहरुसँग।</string>
   <string name="xJoinedTeamY">%1$s %2$sटोलीमा सामेल हुनुभयो</string>
   <string name="xCreatedTeamY">%1$s ले %2$s टोलीमा स्थापना गर्नुभयो</string>
+  <string name="startedStreaming">ले स्ट्रिम गर्न शुरु गर्नुभयो</string>
   <string name="xStartedStreaming">%s ले स्ट्रिम गर्न शुरु गर्नुभयो</string>
   <string name="averageElo">औसत रेटिङ</string>
   <string name="location">ठेगाना</string>
@@ -364,8 +373,11 @@
   <string name="apply">पेश</string>
   <string name="save">सुरक्षित गर्नुहोस्</string>
   <string name="leaderboard">सर्वोत्कृष्ट खेलाडीहरु</string>
+  <string name="screenshotCurrentPosition">अहिलेको पोजिशनको स्क्रिनसट निकाल्नुहोस् ।</string>
+  <string name="gameAsGIF">GIF को रूपमा सेभ गर्नुहोस्</string>
   <string name="pasteTheFenStringHere">FEN स्ट्रिङ्ग यहाँ पेष्ट गरौं</string>
   <string name="pasteThePgnStringHere">PGN स्ट्रिङ्ग यहाँ पेष्ट गरौं</string>
+  <string name="orUploadPgnFile">PGN फाईल अपलोड गर्नुहोस् ।</string>
   <string name="fromPosition">पोजिसन बाट</string>
   <string name="continueFromHere">अगाडि खेलौ</string>
   <string name="toStudy">अध्ययन</string>
@@ -480,7 +492,7 @@
   </plurals>
   <string name="automaticallyProceedToNextGameAfterMoving">चाल चलेपछि स्वत: अर्को खेलमा जाऔ</string>
   <string name="autoSwitch">आफै खेल बदल्ने</string>
-  <string name="puzzles">प्रशिक्षण</string>
+  <string name="puzzles">पजल </string>
   <string name="name">नाम</string>
   <string name="description">विवरण</string>
   <string name="no">हुदैन</string>
