--- a/translation/dest/faq/fa-IR.xml
+++ b/translation/dest/faq/fa-IR.xml
@@ -106,4 +106,13 @@
 سپس انتخاب کنید که آیا میخواهید اعلان های لایچس مجاز باشند و یا مسدود شوند.</string>
   <string name="enableAutoplayForSoundsQ">پخش خودکار صدا را فعال می‌کنید؟</string>
   <string name="desktop">رایانه</string>
+  <string name="stopMyselfFromPlaying" comment="As in &quot;How do I stop myself from playing?&quot;.&#10;&#10;It is an FAQ answer that addresses chess/gaming addiction.">چگونه خودم را از بازی، بازدارم؟</string>
+  <string name="mentalHealthCondition" comment="Part of a longer FAQ answer on chess/gaming addiction. See the full text on adviceOnMitigatingAddiction.">وضعیت سلامت روانی خوداتکا</string>
+  <string name="lichessUserstyles" comment="User styles are ways to customise the appearance of Lichess using third-party tools.&#10;&#10;Part of a longer FAQ answer on chess/gaming addiction. See the full text on adviceOnMitigatingAddiction.">سبک‌های کاربری Lichess</string>
+  <string name="fewerLobbyPools" comment="Lobby pools are options to quick pair for games on the home page (e.g. 1+0, 3+0).&#10;In this context, this is mentioned for people who want to limit bullet and blitz.&#10;&#10;Part of a longer FAQ answer on chess/gaming addiction. See the full text on adviceOnMitigatingAddiction.">جَرگه‌های سَرسَرای کمتر</string>
+  <string name="adviceOnMitigatingAddiction" comment="Part of the FAQ answer &quot;How to [...] Stop myself from playing?&quot;&#10;&#10;%1$s, %2$s, and %3$s is software which may change.&#10;&#10;%4$s is &quot;Lichess userstyles&quot; (as in CSS styles)&#10;%5$s is &quot;fewer lobby pools&quot;.&#10;&#10;%6$s is &quot;stand-alone mental health condition&quot;.">ما پیاپی از کاربران پیام‌هایی دریافت می‌کنیم که از ما کمک می‌خواهند تا جلوی بازی بیش از حدشان را بگیریم.
+
+در حالی که Lichess به جز برای نقض شرایط خدمات، بازیکنان را تحریم یا مسدود نمی‌کند، توصیه می‌کنیم از ابزارهای خارجی برای محدودسازی خوره‌بازی استفاده کنید. برخی از پیشنهادهای رایجِ مسدودگرهای وبگاه، عبارتند از %1$s و %2$s و %3$s. اگر می‌خواهید به استفاده از Lichess ادامه دهید، ولی به بازی‌های تند وسوسه نشوید، ممکن است به %4$s نیز علاقه‌مند باشید، %5$s هم وجود دارد.
+
+برخی از بازیکنان ممکن است احساس کنند رفتار بازی‌شان، به اعتیاد تبدیل می‌شود. در واقع، WHO اختلال بازی را به عنوان %6$s طبقه‌بندی می‌کند، با بودن ویژگی‌های لازم 1) اختلال در مهار بازی، 2) اولویت دادن فزاینده به بازی، و 3) تشدید بازی کردن با وجود پیامدهای منفی. اگر می‌اندیشید که شطرنج‌بازی‌تان این الگو را می‌دنبالد، تشویق‌تان می‌کنیم درباره آن با یکی از دوستان یا عضوهای خانواده و/یا با یک حرفه‌ای صحبت کنید.</string>
 </resources>
